...
                      LucideIcons.box,
                      'meshes',
                    ),
                    _newAssetTypeBtn(
                      context,
                      vm,
                      'New Material (.lmas)',
                      AssetType.filamat,
                      LucideIcons.palette,
                      'materials',
                    ),
                    _newAssetTypeBtn(
                      context,
...
